Updated index, fixed hover effect for mobile, fixed contrast

--- a/public/css/hovereffect.css
+++ b/public/css/hovereffect.css
@@ -38,8 +38,8 @@
 
 .hovereffect:hover img {
   filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="1.4" /><feFuncG type="linear" slope="1.4" /><feFuncB type="linear" slope="1.4" /></feComponentTransfer></filter></svg>#filter');
-  filter: brightness(1.4);
-  -webkit-filter: brightness(1.4);
+  filter: brightness(.8);
+  -webkit-filter: brightness(.8);
 }
 
 .hovereffect h2 {
